Atualização da Atividade

--- a/HTML/AULA 5/estudante.html
+++ b/HTML/AULA 5/estudante.html
@@ -5,8 +5,36 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dicas para Estudante HTML</title>
+        <style>
+           h1 {
+            color: blue;
+           }
+        </style>
     </head>
     <body>
-
+         <h1>Dicas para um Estudande Html</h1>
+         <div>
+            <p><h4>Vamos aprender como iniciar na programação</h4></p>
+            <p>Para começar vamos aprender a fazer uma lista não ordenada</p>
+            <p>&#10094/ul&#10095 
+            <br/>&#10094/li&#10095
+            <br/>&#10094/li&#10095
+            <br/>&#10094/li&#10095
+            <br/>&#10094/li&#10095
+            <br/>&#10094/ul&#10095</p>
+         </div>
+         <hr/>
+         <div>
+            <p>Lista ordenada</p>
+            <p>&#10094/ol&#10095
+                <br/>&#10094/li&#10095
+                <br/>&#10094/li&#10095
+                <br/>&#10094/li&#10095
+                <br/>&#10094/li&#10095
+                <br/>&#10094/ul&#10095   
+                <br/>&#10094/ol&#10095
+            </p> 
+         </div>
+         <button type="submit">Para fazer a copia do codigo.</button>
     </body>
 </html>
