--- a/CSS/AULA 2/lista.html
+++ b/CSS/AULA 2/lista.html
@@ -8,11 +8,24 @@
     
     <style>
          li::marker {
-         color: blueviolet;
+         color: blue;
         }
-      h2 {
-        color: red;
-      }  
+
+        ol {
+          background: #ff9999;
+          padding: 20px;
+        }
+
+        ol li {
+          background: #ffe5e5;
+          color: darkred;
+          padding: 5px ;
+          margin-left: 35px; 
+        }
+          
+        h2 {
+          color: rgb(255, 0, 119);
+        }
     </style>
 </head>
 <body>
