--- a/JavaScript/AULA 01/index.html
+++ b/JavaScript/AULA 01/index.html
@@ -7,7 +7,9 @@
     <title>Documento HTML para JS </title>
 </head>
 <body>
-    <div><h1>Bem vindo!</h1></div>
+    <div>
+        <h1>Bem vindo! <strong>alunos</strong> </h1>
+    </div>
     <p>Nó de texto</p>
     <p id="texto">Aqui vem o texto com id</p>
 
@@ -17,6 +19,7 @@
         <li class="impar">3</li>
         <li class="par">4</li>
     </ul>
-    
+    <div id="container" style="background-color: aquamarine;">a</div>
+    <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
