--- a/JavaScript/AULA 03/cronometro.html
+++ b/JavaScript/AULA 03/cronometro.html
@@ -10,7 +10,11 @@
 <body>
     <h1>Cronômetro</h1>
     <span id="relogio">00:00:00</span>
-
+     <div>
+        <button id="iniciar">Iniciar</button>
+        <button id="parar">Parar</button>
+        <button id="resetar">Reset</button>
+     </div>
     <script type="text/javascript" src="crono.js"></script>
 </body>
 </html>
