--- a/JavaScript/Avaliação Final/index.html
+++ b/JavaScript/Avaliação Final/index.html
@@ -15,5 +15,8 @@
         <h1><span class="c">C</span>ANDY SHOP</h1>
         <a href="vitrine.html"><button class="botão" >Detalhes</button></a>
      </div>
+     <div id="crono"></div>
+
+     <script src="index.js"></script>
 </body>
 </html>
