--- a/JavaScript/Avaliação Final/vitrine.html
+++ b/JavaScript/Avaliação Final/vitrine.html
@@ -27,12 +27,13 @@
     <p class="texto">Cadastre o seu E-mail para receber as promoções do site.</p>
     <div class="formulario">
         <form>
-            E-mail: <input type="email" name="e-mail" placeholder="Digite seu e-mail aqui">
+            E-mail: <input type="email" name="e-mail" placeholder= "Digite seu e-mail aqui" id="email">
         </form>
         <span>Aceita os termos de uso??</span>
         <input type="radio" name="novidades" id="sim" value="sim" checked><label for="sim">Sim</label>
         <input type="radio" name="novidades" id="nao" value="nao"><label for="nao">Não</label>
         <button id="clique" onclick="alert('E-mail cadastrado com sucesso!')">Enviar</button>
     </div>
+    <script src="vitrine.js"></script>
 </body>
 </html>
