--- a/masterclass/index.html
+++ b/masterclass/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-b">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Primeiro Programa</title>
+    <title>Masterclass JSX</title>
   </head>
   <body>
     <div id="root"></div>
