--- a/CSS/Prova/detalhes_1.html
+++ b/CSS/Prova/detalhes_1.html
@@ -11,8 +11,8 @@
     <img src="https://www.finistore.com.br/dw/image/v2/BHBX_PRD/on/demandware.static/-/Sites-fini-master-catalog/default/dwd11f7e5f/dentaduras_500g_1.jpg?sw=1000&sh=1000&sm=fit" alt="dentadura">
     <div id="detalhe">
         <h1>Dentaduras</h1>
-        <p>O clássico dos clássicos! Dentaduras é o amor incondicional, Não tem o que dizer, só sentir. No formato de dentadura e sabor de morango e framboesa, nas cores rosa e branca.</p>
-    </div>
+        <p></p>
+    </div>O clássico dos clássicos! Dentaduras é o amor incondicional, Não tem o que dizer, só sentir. No formato de dentadura e sabor de morango e framboesa, nas cores rosa e branca.
     <button class="botão" onclick="alert('Compra realizada com sucesso')">Comprar</button>
 </body>
 </html>
